deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-dev
  template:
    metadata:
      labels:
        app: nginx-dev
    spec:
      containers:
      - name: nginx
        image: 539935451710.dkr.ecr.us-east-1.amazonaws.com/squad-7:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ecr-registry-secret
